lex-parser/tests/snapshots/tokenizer_elements__annotation_flat_block_simple.snap
---
source: tests/tokenizer_elements.rs
expression: tokens
---
[
    (
        LexMarker,
        0..2,
    ),
    (
        Whitespace,
        2..3,
    ),
    (
        Text(
            "note",
        ),
        3..7,
    ),
    (
        Whitespace,
        7..8,
    ),
    (
        LexMarker,
        8..10,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        10..11,
    ),
    (
        Indent(
            [
                (
                    Indentation,
                    11..15,
                ),
            ],
        ),
        0..0,
    ),
    (
        Text(
            "This",
        ),
        15..19,
    ),
    (
        Whitespace,
        19..20,
    ),
    (
        Text(
            "is",
        ),
        20..22,
    ),
    (
        Whitespace,
        22..23,
    ),
    (
        Text(
            "an",
        ),
        23..25,
    ),
    (
        Whitespace,
        25..26,
    ),
    (
        Text(
            "important",
        ),
        26..35,
    ),
    (
        Whitespace,
        35..36,
    ),
    (
        Text(
            "note",
        ),
        36..40,
    ),
    (
        Whitespace,
        40..41,
    ),
    (
        Text(
            "that",
        ),
        41..45,
    ),
    (
        Whitespace,
        45..46,
    ),
    (
        Text(
            "requires",
        ),
        46..54,
    ),
    (
        Whitespace,
        54..55,
    ),
    (
        Text(
            "a",
        ),
        55..56,
    ),
    (
        Whitespace,
        56..57,
    ),
    (
        Text(
            "detailed",
        ),
        57..65,
    ),
    (
        Whitespace,
        65..66,
    ),
    (
        Text(
            "explanation",
        ),
        66..77,
    ),
    (
        Period,
        77..78,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        78..79,
    ),
    (
        Dedent(
            [],
        ),
        0..0,
    ),
    (
        LexMarker,
        79..81,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        81..82,
    ),
]
