lex-parser/tests/snapshots/tokenizer_elements__annotation_flat_marker_simple.snap
---
source: tests/tokenizer_elements.rs
expression: tokens
---
[
    (
        LexMarker,
        0..2,
    ),
    (
        Whitespace,
        2..3,
    ),
    (
        Text(
            "note",
        ),
        3..7,
    ),
    (
        Whitespace,
        7..8,
    ),
    (
        LexMarker,
        8..10,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        10..11,
    ),
]
