lex-parser/tests/snapshots/tokenizer_elements__definition_flat_simple.snap
---
source: tests/tokenizer_elements.rs
expression: tokens
---
[
    (
        Text(
            "Cache",
        ),
        0..5,
    ),
    (
        Colon,
        5..6,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        6..7,
    ),
    (
        Indent(
            [
                (
                    Indentation,
                    7..11,
                ),
            ],
        ),
        0..0,
    ),
    (
        Text(
            "Temporary",
        ),
        11..20,
    ),
    (
        Whitespace,
        20..21,
    ),
    (
        Text(
            "storage",
        ),
        21..28,
    ),
    (
        Whitespace,
        28..29,
    ),
    (
        Text(
            "for",
        ),
        29..32,
    ),
    (
        Whitespace,
        32..33,
    ),
    (
        Text(
            "frequently",
        ),
        33..43,
    ),
    (
        Whitespace,
        43..44,
    ),
    (
        Text(
            "accessed",
        ),
        44..52,
    ),
    (
        Whitespace,
        52..53,
    ),
    (
        Text(
            "data",
        ),
        53..57,
    ),
    (
        Period,
        57..58,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        58..59,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        59..60,
    ),
    (
        Dedent(
            [],
        ),
        0..0,
    ),
    (
        Text(
            "Something",
        ),
        60..69,
    ),
    (
        Whitespace,
        69..70,
    ),
    (
        Text(
            "to",
        ),
        70..72,
    ),
    (
        Whitespace,
        72..73,
    ),
    (
        Text(
            "finish",
        ),
        73..79,
    ),
    (
        Whitespace,
        79..80,
    ),
    (
        Text(
            "the",
        ),
        80..83,
    ),
    (
        Whitespace,
        83..84,
    ),
    (
        Text(
            "element",
        ),
        84..91,
    ),
]
