lex-parser/tests/snapshots/tokenizer_elements__paragraph_flat_oneline.snap
---
source: tests/tokenizer_elements.rs
expression: tokens
---
[
    (
        Text(
            "This",
        ),
        0..4,
    ),
    (
        Whitespace,
        4..5,
    ),
    (
        Text(
            "is",
        ),
        5..7,
    ),
    (
        Whitespace,
        7..8,
    ),
    (
        Text(
            "a",
        ),
        8..9,
    ),
    (
        Whitespace,
        9..10,
    ),
    (
        Text(
            "simple",
        ),
        10..16,
    ),
    (
        Whitespace,
        16..17,
    ),
    (
        Text(
            "paragraph",
        ),
        17..26,
    ),
    (
        Whitespace,
        26..27,
    ),
    (
        Text(
            "with",
        ),
        27..31,
    ),
    (
        Whitespace,
        31..32,
    ),
    (
        Text(
            "just",
        ),
        32..36,
    ),
    (
        Whitespace,
        36..37,
    ),
    (
        Text(
            "one",
        ),
        37..40,
    ),
    (
        Whitespace,
        40..41,
    ),
    (
        Text(
            "line",
        ),
        41..45,
    ),
    (
        Period,
        45..46,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        46..47,
    ),
]
